Fix bbug where line chart point labels were not readable. Closes #1274

--- a/src/js/themes/arctic/css/metacatui.css
+++ b/src/js/themes/arctic/css/metacatui.css
@@ -1193,7 +1193,6 @@ svg .domain{
 }
 .line-chart-label.bg{
 	stroke-width: 2px;
-	fill: #FFF;
 	stroke: #FFF;
 	opacity: 0.8;
 }
