--- a/src/js/themes/dataone/css/metacatui.css
+++ b/src/js/themes/dataone/css/metacatui.css
@@ -1858,7 +1858,6 @@ svg .point{
 }
 .line-chart-label.bg{
 	stroke-width: 2px;
-	fill: #FFF;
 	stroke: #FFF;
 	opacity: 0.8;
 }
