--- a/src/js/themes/knb/css/metacatui.css
+++ b/src/js/themes/knb/css/metacatui.css
@@ -1405,7 +1405,6 @@ svg .domain{
 }
 .line-chart-label.bg{
 	stroke-width: 2px;
-	fill: #FFF;
 	stroke: #FFF;
 	opacity: 0.8;
 }
